# stone-frontend

./: LICENSE  README.md  re.txt  stack.yaml  stone-frontend.cabal  test.txt
src/: ParserTest.hs  StoneAST.hs  StoneFrontend.hs  StoneLexer.hs  TypeCheck.hs  old_StoneFrontend.hs
