name:                stone-frontend
version:             0.9.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MichaeGon/stone-frontend#readme
license:             BSD3
license-file:        LICENSE
author:              MichaeGon
maintainer:          example@example.com
copyright:           2016 MichaeGon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     StoneFrontend, TypeCheck
  other-modules:       StoneAST, StoneLexer
  build-depends:       base >= 4.7 && < 5, parsec, containers, mtl
  --, compile-time-player
  default-language:    Haskell2010

executable ParserTest
  hs-source-dirs:      src
  main-is:             ParserTest.hs
  other-modules:       StoneAST, StoneLexer, StoneFrontend, TypeCheck
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec, containers, mtl
  --, compile-time-player

source-repository head
  type:     git
  location: https://github.com/MichaeGon/stone-frontend
